syntax = "proto3";
option java_multiple_files =false ;
option java_package = "com.xhpcd";
option java_outer_classname = "HelloProto";

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string result = 1;
}

message HelloRequest1{
    repeated string name = 1;
}

message HelloResponse1{
    string result = 1;
}

service HelloService{
    rpc hello(HelloRequest) returns (HelloResponse){};
    rpc hello1(HelloRequest1) returns (HelloResponse1){};

    //服务端流式rpc
    rpc c2ss(HelloRequest) returns (stream HelloResponse){};
    //客户端流式rpc
    rpc cs2s(stream HelloRequest) returns (HelloResponse){};
    //双向流式rpc
    rpc cs2ss(stream HelloRequest) returns (stream HelloResponse){};
}